2007-03-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-menubar): Add w3m-session-save and
	w3m-session-select.
	(w3m-tab-button-menu-commands): Ditto.

2007-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el: New file merging w3m-e21.el, w3m-e23.el and w3m-fsf.el.
	(image-size): No need to silence the byte compiler.
	(w3m-ccl-get-ucs-codepoint-with-emacs-unicode): Remove.
	(w3m-euc-japan-encoder, w3m-euc-japan-encoder)
	(w3m-iso-latin-1-encoder, w3m-iso-latin-1-encoder): Redefine them
	only for Emacs 22 and earlier.

	* w3m-e21.el, w3m-e23.el, w3m-fsf.el: Remove.

	* w3m.el: Load w3m-ems.el instead of w3m-e21.el or w3m-e23.el.
	(w3m-fontify-strike-through): Remove variable.

	* w3mhack.el (w3mhack-mdelete): Remove.
	(w3mhack-module-list): Use w3m-ems.el instead of w3m-fsf.el and
	w3m-e21.el or w3m-e23.el.

	* Makefile.in (tarball): No need to exclude w3m-e23.el.

2007-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_SET_XEMACSDEBUG): Fix the way to quote the value
	of XEMACSDEBUG.  Reported by Norbert Koch <nk@viteno.net>.

2007-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_SET_XEMACSDEBUG): Quote VANILLA_FLAG.

2007-03-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_SET_XEMACSDEBUG): New function; set XEMACSDEBUG
	environment variable, which is eval'd when XEmacs 21.5 starts, to
	the Lisp form, which sets `log-warning-minimum-level' to `error',
	in order to suppress warnings for Lisp shadows when XEmacs 21.5
	starts.
	(AC_PATH_EMACS): Run AC_SET_XEMACSDEBUG.
	(AC_EMACS_LISP, AC_ADD_LOAD_PATH): Use XEMACSDEBUG.

	* Makefile.in (XEMACSDEBUG): New variable.
	(lisp, what-where, install-package, install-package-ja, dist)
	(.el.elc, slow, very-slow): Use it.

	* doc/Makefile.in (XEMACSDEBUG): New variable.
	(EMACSINFO, version.texi, install-en, install-ja): Use it.

	* w3mhack.el: Reset `log-warning-minimum-level' to `info'.

2007-03-15  Hideyuki SHIRAI  <shirai@meadowy.org>
